layout bug

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -321,6 +321,7 @@ section#main {
     header {
       padding-left: 10px;
       padding-top: 5px;
+      margin: 0 -1px;
       height:32px;
     }
     #new_task { padding: 10px; }
